--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "grunt-contrib-watch": "~0.2.0",
     "grunt-jsdoc": "^0.5.7",
     "grunt-karma": "~0.6.2",
-    "grunt-template-jasmine-requirejs": "~0.1.7",
+    "grunt-template-jasmine-requirejs": "^0.2.3",
     "karma": "~0.10.4",
     "karma-chrome-launcher": "~0.1.0",
     "karma-coverage": "~0.1.0",
@@ -41,6 +41,7 @@
     "karma-phantomjs-launcher": "~0.1.0",
     "karma-requirejs": "~0.2.0",
     "karma-script-launcher": "~0.1.0",
+    "load-grunt-tasks": "^3.2.0",
     "requirejs": "~2.1.15"
   }
 }
