--- a/package.json
+++ b/package.json
@@ -42,5 +42,14 @@
     "karma-script-launcher": "~0.1.0",
     "load-grunt-tasks": "^3.2.0",
     "requirejs": "~2.1.15"
-  }
+  },
+  "authors": [
+    {
+      "name": "marina",
+      "email": "marina@gmail.com"
+    },
+    2,
+    3,
+    4
+  ]
 }
