--- a/package.json
+++ b/package.json
@@ -1,46 +1,1 @@
-{
-  "name": "encoda",
-  "description": "An library for encoding/escaping in JavaScript",
-  "version": "0.1.0",
-  "engines": {
-    "node": ">= 0.8.0"
-  },
-  "scripts": {
-    "test": "grunt jasmine"
-  },
-  "author": {
-    "name": "Dan Wellman",
-    "email": "danwellman@hotmail.com",
-    "url": "http://danwellman.co.uk/encoda"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/danheberden/gith/blob/master/LICENSE-MIT"
-    }
-  ],
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-concat": "~0.1.2",
-    "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-jasmine": "~0.5.1",
-    "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-requirejs": "~0.4.0",
-    "grunt-contrib-uglify": "~0.1.1",
-    "grunt-contrib-watch": "~0.2.0",
-    "grunt-jsdoc": "^0.5.7",
-    "grunt-karma": "~0.6.2",
-    "grunt-template-jasmine-requirejs": "^0.2.3",
-    "karma": "~0.10.4",
-    "karma-chrome-launcher": "~0.1.0",
-    "karma-coverage": "~0.1.0",
-    "karma-firefox-launcher": "~0.1.0",
-    "karma-jasmine": "~0.1.3",
-    "karma-phantomjs-launcher": "~0.1.0",
-    "karma-requirejs": "~0.2.0",
-    "karma-script-launcher": "~0.1.0",
-    "load-grunt-tasks": "^3.2.0",
-    "requirejs": "~2.1.15"
-  }
-}
+[object Object]
