--- a/package.json
+++ b/package.json
@@ -43,13 +43,8 @@
     "load-grunt-tasks": "^3.2.0",
     "requirejs": "~2.1.15"
   },
-  "authors": [
-    {
-      "name": "marina",
-      "email": "marina@gmail.com"
-    },
-    2,
-    3,
-    4
+  "contributors": [
+    "Kyle Kelley <rgbkrk@gmail.com>",
+    "GeneLocklin <gene.locklin@gmail.com>"
   ]
 }
