--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt jasmine"
+    "test": "grunt test"
   },
   "author": {
     "name": "Dan Wellman",
